--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
-.App {
-  text-align: center;
+body {
+  background-image: url('/public/fondo.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
+  height: 600px;
+  width: 500px;
+  padding: 20px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.container {
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.text-white {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.weather-card {
+  background: rgba(25, 74, 138, 0.8);
+  color: wheat;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-card:hover {
+  transform: translateY(-10px);
+}
+
+.weather-card img {
+  width: 100px;
+  height: 100px;
+}
+
+/*BOTON*/
+.contenedorBtn {
+  display: flex;
+  justify-content: center;
+}
+
+.btnBuscar {
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  color: #090909;
+  padding: 0.5em 1.5em;
+  cursor: pointer;
+  font-size: 15px;
+  font-family:sans-serif;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: 1px solid #e8e8e8;
+
+}
+
+.btnBuscar:active {
+  color: #666;
+  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.btnBuscar:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.btnBuscar:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: rgba(25, 74, 138, 0.8);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.btnBuscar:hover {
+  color: #ffffff;
+  border: 1px solid rgba(25, 74, 138, 0.8);
+}
+
+.btnBuscar:hover:before {
+  top: -35%;
+  background-color: rgba(25, 74, 138, 0.8);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.btnBuscar:hover:after {
+  top: -45%;
+  background-color: rgba(25, 74, 138, 0.8);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
